removed tailwindcss from project

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* src/index.css */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+body {
+  margin: 0;
+  font-family: sans-serif;
+}
